Clean up SparkBuild from merge